--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
     <title>Food ecommerce</title>
   </head>
   <body>
-    <div id="root">root</div>
+    <div id="root"></div>
   </body>
 </html>
